2001-04-04  Martin M. Hunt  <hunt@redhat.com>

	* main.c (captured_main): For GDBtk, don't use tui_fileopen().
	Handle all stream setup in gdbtk_init

2001-04-04  Mark Kettenis  <kettenis@gnu.org>

	* i386-tdep.c (i386_extract_return_value): Don't return the return
	value of a void function.
	(i386_store_return_value): Likewise.

2001-04-03  Andrew Cagney  <ac131313@redhat.com>

	Obsolete w65-*-* target.
	* configure.tgt (w65-*-*): Obsolete.
	* config/w65/w65.mt: Obsolete.
	* config/w65/tm-w65.h: Obsolete.
	* w65-tdep.c: Obsolete.
	* NEWS: Update.  Fix TiC80 description.
	* TODO: Update.

2001-04-03  Andrew Cagney  <ac131313@redhat.com>

	Obsolete tic80-*-* target.
	* configure.tgt (tic80-*-*): Obsolete.
	* config/tic80/tic80.mt: Obsolete.
	* config/tic80/tm-tic80.h: Obsolete.
	* tic80-tdep.c: Obsolete.
	* TODO: Update
	* NEWS: Update.

2001-04-02  J.T. Conklin  <jtc@redback.com>

	* remote-mips.c (S_IROTH): Moved definition from here.
	* gdb_stat.h (S_IROTH): to here.

	* remote.c (remote_protocol_e, remote_protocol_E): Define.
	(set_remote_protocol_e_packet_cmd)
	(set_remote_protocol_E_packet_cmd)
	(show_remote_protocol_e_packet_command)
	(show_remote_protocol_E_packet_command): New functions.
	(init_all_packet_configs): Initialize remote_protocol_e and
	remote_protocol_E.
	(remote_resume, remote_async_resume): Support e/E command
	packets.
	(show_remote_cmd): Show state of remote_protocol_e and 
	remote_protocol_E.
	(_initialize_remote): Add "set remote step-over-range-packet" 
	and "set remote step-over-range-w-signal-packet" to CLI.

2001-04-01  Andrew Cagney  <ac131313@redhat.com>

	Obsolete ns32k-*-mach3*, ns32k-umax-*, ns32k-utek-sysv* and
	ns32k-utek-*.
	* Makefile.in (ALLDEPFILES): Delete umax-xdep.c and ns32km3-nat.c.
	(umax-xdep.o, ns32km3-nat.o): Obsolete.
	* configure.tgt (ns32k-*-mach3*, ns32k-utek-sysv*, ns32k-utek-*):
	Obsolete.
	* configure.host (ns32k-*-mach3*, ns32k-umax-*, ns32k-utek-sysv*):
	Obsolete.
	* config/ns32k/merlin.mh: Obsolete.